# TalkToYourData

./: .gitignore  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
backend/app/api/v1/: auth.py  conversations.py  documents.py  health.py  livekit_token.py  router.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: engine.py  models.py
